fix: configure production environment URLs for Heroku backend
- Corrige import environment.development vers environment dans auth-http.service
- Uniformise noms propriétés (apiAuthUrl, apiLogiqueUrl) entre dev et prod
- Configure URLs Heroku dans environment.prod.ts
- Rebuild et redéploiement Firebase avec bonnes URLs